# nr-data

./: .gitignore  README.md  invenio.cfg  oarepo.yaml  pyproject.toml  requirements.txt  variables
datasets/: config.py  ext.py  proxies.py
datasets/files/: api.py  models.py
datasets/models/: records.json  ui.json
datasets/records/: api.py  models.py
datasets/records/dumpers/: dumper.py  edtf.py  multilingual.py
datasets/records/mappings/os-v2/datasets/: datasets-1.0.0.json  datasets_draft-1.0.0.json
datasets/records/requests/: resolvers.py
datasets/records/requests/delete_record/: types.py
datasets/records/requests/edit_record/: types.py
datasets/records/requests/publish_draft/: types.py
datasets/resources/files/: config.py  ui.py
datasets/resources/records/: config.py  ui.py
datasets/services/files/: config.py  schema.py
datasets/services/files/published/: config.py  service.py
datasets/services/records/: config.py  facets.py  results.py  schema.py  search.py  service.py
datasets/services/records/published/: config.py  service.py
datasets/translations/: messages.pot
datasets/translations/en/LC_MESSAGES/: messages.mo  messages.po
datasets/views/files/: api.py  app.py
datasets/views/records/: api.py  app.py
datasets/views/requests/: api.py  app.py
docker/: Dockerfile.production  development.crt  development.key  docker-compose.yml
models/: datasets.yaml
ui/branding/semantic-ui/less/: theme.config
ui/datasets/templates/semantic-ui/components/: DatasetsAdditionaltitle.jinja  DatasetsContributor.jinja  DatasetsCreator.jinja  DatasetsDetailRoot.jinja  DatasetsGeolocation.jinja  DatasetsGeolocationPoint.jinja  DatasetsLocation.jinja  DatasetsMultilingual.jinja  DatasetsRelatedItem.jinja  DatasetsSeries.jinja  DatasetsSubject.jinja
ui/datasets/templates/semantic-ui/datasets/: Detail.jinja
